# ImageScaling

./: CMakeLists.txt  Main.qml  README.md  imagescaling.cpp  imagescaling.h  main.cpp
